src/wrapper/torch_api_generated.h

void atg_hardshrink_backward(tensor *, tensor grad_out, tensor self, scalar lambd);
void atg_hardtanh(tensor *, tensor self);
void atg_hardtanh_(tensor *, tensor self);
void atg_hardtanh_out(tensor *, tensor output, tensor self);
void atg_hinge_embedding_loss(tensor *, tensor self, tensor target, double margin, int64_t reduction);
void atg_histc(tensor *, tensor self, int64_t bins);
void atg_histc_out(tensor *, tensor result, tensor self, int64_t bins);
void atg_hspmm(tensor *, tensor mat1, tensor mat2);
void atg_hspmm_out(tensor *, tensor result, tensor mat1, tensor mat2);
void atg_ifft(tensor *, tensor self, int64_t signal_ndim, int normalized);
void atg_index(tensor *, tensor self, tensor *indices_data, int indices_len);
void atg_index_add_(tensor *, tensor self, int64_t dim, tensor index, tensor source);
void atg_index_copy_(tensor *, tensor self, int64_t dim, tensor index, tensor source);
void atg_index_fill_(tensor *, tensor self, int64_t dim, tensor index, tensor value);
void atg_index_put(tensor *, tensor self, tensor *indices_data, int indices_len, tensor values);
void atg_index_put_(tensor *, tensor self, tensor *indices_data, int indices_len, tensor values);
void atg_index_select(tensor *, tensor self, int64_t dim, tensor index);
void atg_index_select_out(tensor *, tensor result, tensor self, int64_t dim, tensor index);
void atg_instance_norm(tensor *, tensor input, tensor weight, tensor bias, tensor running_mean, tensor running_var, int use_input_stats, double momentum, double eps, int cudnn_enabled);
void atg_inverse(tensor *, tensor self);
void atg_inverse_out(tensor *, tensor result, tensor self);
void atg_irfft(tensor *, tensor self, int64_t signal_ndim, int normalized, int onesided, long int *signal_sizes_data, int signal_sizes_len);
void atg_isclose(tensor *, tensor self, tensor other, double rtol, double atol, int equal_nan);
void atg_kl_div(tensor *, tensor self, tensor target, int64_t reduction);
void atg_kl_div_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_kthvalue(tensor *, tensor self, int64_t k, int64_t dim, int keepdim);
void atg_kthvalue_out(tensor *, tensor values, tensor indices, tensor self, int64_t k, int64_t dim, int keepdim);
void atg_l1_loss(tensor *, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_backward(tensor *, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_forward(tensor *, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_forward_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_l1_loss_out(tensor *, tensor output, tensor self, tensor target, int64_t reduction);
void atg_le(tensor *, tensor self, tensor other);
void atg_le_(tensor *, tensor self, tensor other);
void atg_le_out(tensor *, tensor result, tensor self, tensor other);
void atg_leaky_relu(tensor *, tensor self);
void atg_leaky_relu_(tensor *, tensor self);
void atg_leaky_relu_out(tensor *, tensor output, tensor self);
void atg_lgamma(tensor *, tensor self);
void atg_lgamma_(tensor *, tensor self);
void atg_lgamma_out(tensor *, tensor result, tensor self);
void atg_linear(tensor *, tensor input, tensor weight, tensor bias);
void atg_linspace1(tensor *, scalar start, scalar end, int options_kind, int options_device);
void atg_linspace2(tensor *, scalar start, scalar end, int64_t steps, int options_kind, int options_device);
void atg_linspace_out1(tensor *, tensor result, scalar start, scalar end);
void atg_linspace_out2(tensor *, tensor result, scalar start, scalar end, int64_t steps);
void atg_log(tensor *, tensor self);
void atg_log10(tensor *, tensor self);
void atg_log10_(tensor *, tensor self);
void atg_log10_out(tensor *, tensor result, tensor self);
void atg_log1p(tensor *, tensor self);
void atg_log1p_(tensor *, tensor self);
void atg_log1p_out(tensor *, tensor result, tensor self);
void atg_log2(tensor *, tensor self);
void atg_log2_(tensor *, tensor self);
void atg_log2_out(tensor *, tensor result, tensor self);
void atg_log_(tensor *, tensor self);
void atg_log_normal_(tensor *, tensor self, double mean, double std);
void atg_log_out(tensor *, tensor result, tensor self);
void atg_log_sigmoid(tensor *, tensor self);
void atg_log_sigmoid_backward(tensor *, tensor grad_output, tensor self, tensor buffer);
void atg_log_sigmoid_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, tensor buffer);
void atg_log_sigmoid_forward(tensor *, tensor self);
void atg_log_sigmoid_forward_out(tensor *, tensor output, tensor buffer, tensor self);
void atg_log_sigmoid_out(tensor *, tensor output, tensor self);
void atg_log_softmax(tensor *, tensor self, int64_t dim);
void atg_logdet(tensor *, tensor self);
void atg_logspace1(tensor *, scalar start, scalar end, int options_kind, int options_device);
void atg_logspace2(tensor *, scalar start, scalar end, int64_t steps, int options_kind, int options_device);
void atg_logspace_out1(tensor *, tensor result, scalar start, scalar end);
void atg_logspace_out2(tensor *, tensor result, scalar start, scalar end, int64_t steps);
void atg_logsumexp(tensor *, tensor self, int64_t dim, int keepdim);
void atg_logsumexp_out(tensor *, tensor result, tensor self, int64_t dim, int keepdim);
void atg_lstm1(tensor *, tensor input, tensor *hx_data, int hx_len, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional, int batch_first);
void atg_lstm2(tensor *, tensor data, tensor batch_sizes, tensor *hx_data, int hx_len, tensor *params_data, int params_len, int has_biases, int64_t num_layers, double dropout, int train, int bidirectional);
void atg_lstm_cell(tensor *, tensor input, tensor *hx_data, int hx_len, tensor w_ih, tensor w_hh, tensor b_ih, tensor b_hh);
void atg_lt(tensor *, tensor self, tensor other);
void atg_lt_(tensor *, tensor self, tensor other);
void atg_lt_out(tensor *, tensor result, tensor self, tensor other);
void atg_margin_ranking_loss(tensor *, tensor input1, tensor input2, tensor target, double margin, int64_t reduction);
void atg_masked_fill_(tensor *, tensor self, tensor mask, tensor value);
void atg_masked_scatter_(tensor *, tensor self, tensor mask, tensor source);
void atg_masked_select(tensor *, tensor self, tensor mask);
void atg_masked_select_out(tensor *, tensor result, tensor self, tensor mask);
void atg_matmul(tensor *, tensor self, tensor other);
void atg_matmul_out(tensor *, tensor result, tensor self, tensor other);
void atg_matrix_power(tensor *, tensor self, int64_t n);
void atg_matrix_rank1(tensor *, tensor self, double tol, int symmetric);
void atg_matrix_rank2(tensor *, tensor self, int symmetric);
void atg_max(tensor *, tensor self, tensor other);
void atg_max1(tensor *, tensor self, int64_t dim, int keepdim);
void atg_max_out1(tensor *, tensor result, tensor self, tensor other);
void atg_max_out2(tensor *, tensor max, tensor max_values, tensor self, int64_t dim, int keepdim);
void atg_max_pool1d(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool1d_with_indices(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool2d(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool2d_with_indices(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool2d_with_indices_backward(tensor *, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode, tensor indices);
void atg_max_pool2d_with_indices_backward_out(tensor *, tensor grad_input, tensor grad_output, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode, tensor indices);
void atg_max_pool2d_with_indices_forward(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool2d_with_indices_forward_out(tensor *, tensor output, tensor indices, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool2d_with_indices_out(tensor *, tensor output, tensor indices, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);
void atg_max_pool3d(tensor *, tensor self, long int *kernel_size_data, int kernel_size_len, long int *stride_data, int stride_len, long int *padding_data, int padding_len, long int *dilation_data, int dilation_len, int ceil_mode);