src/stubs/torch_bindings_generated.ml


  let hardshrink_backward =
    foreign "atg_hardshrink_backward"
    (ptr t @-> t @-> t @-> scalar @-> returning void)

  let hardtanh =
    foreign "atg_hardtanh"
    (ptr t @-> t @-> returning void)

  let hardtanh_ =
    foreign "atg_hardtanh_"
    (ptr t @-> t @-> returning void)

  let hardtanh_out =
    foreign "atg_hardtanh_out"
    (ptr t @-> t @-> t @-> returning void)

  let hinge_embedding_loss =
    foreign "atg_hinge_embedding_loss"
    (ptr t @-> t @-> t @-> double @-> int64_t @-> returning void)

  let histc =
    foreign "atg_histc"
    (ptr t @-> t @-> int64_t @-> returning void)

  let histc_out =
    foreign "atg_histc_out"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let hspmm =
    foreign "atg_hspmm"
    (ptr t @-> t @-> t @-> returning void)

  let hspmm_out =
    foreign "atg_hspmm_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let ifft =
    foreign "atg_ifft"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let index =
    foreign "atg_index"
    (ptr t @-> t @-> ptr t @-> int @-> returning void)

  let index_add_ =
    foreign "atg_index_add_"
    (ptr t @-> t @-> int64_t @-> t @-> t @-> returning void)

  let index_copy_ =
    foreign "atg_index_copy_"
    (ptr t @-> t @-> int64_t @-> t @-> t @-> returning void)

  let index_fill_ =
    foreign "atg_index_fill_"
    (ptr t @-> t @-> int64_t @-> t @-> t @-> returning void)

  let index_put =
    foreign "atg_index_put"
    (ptr t @-> t @-> ptr t @-> int @-> t @-> returning void)

  let index_put_ =
    foreign "atg_index_put_"
    (ptr t @-> t @-> ptr t @-> int @-> t @-> returning void)

  let index_select =
    foreign "atg_index_select"
    (ptr t @-> t @-> int64_t @-> t @-> returning void)

  let index_select_out =
    foreign "atg_index_select_out"
    (ptr t @-> t @-> t @-> int64_t @-> t @-> returning void)

  let instance_norm =
    foreign "atg_instance_norm"
    (ptr t @-> t @-> t @-> t @-> t @-> t @-> int @-> double @-> double @-> int @-> returning void)

  let inverse =
    foreign "atg_inverse"
    (ptr t @-> t @-> returning void)

  let inverse_out =
    foreign "atg_inverse_out"
    (ptr t @-> t @-> t @-> returning void)

  let irfft =
    foreign "atg_irfft"
    (ptr t @-> t @-> int64_t @-> int @-> int @-> ptr long @-> int @-> returning void)

  let isclose =
    foreign "atg_isclose"
    (ptr t @-> t @-> t @-> double @-> double @-> int @-> returning void)

  let kl_div =
    foreign "atg_kl_div"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let kl_div_backward =
    foreign "atg_kl_div_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let kthvalue =
    foreign "atg_kthvalue"
    (ptr t @-> t @-> int64_t @-> int64_t @-> int @-> returning void)

  let kthvalue_out =
    foreign "atg_kthvalue_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int64_t @-> int @-> returning void)

  let l1_loss =
    foreign "atg_l1_loss"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let l1_loss_backward =
    foreign "atg_l1_loss_backward"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let l1_loss_backward_out =
    foreign "atg_l1_loss_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let l1_loss_forward =
    foreign "atg_l1_loss_forward"
    (ptr t @-> t @-> t @-> int64_t @-> returning void)

  let l1_loss_forward_out =
    foreign "atg_l1_loss_forward_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let l1_loss_out =
    foreign "atg_l1_loss_out"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> returning void)

  let le =
    foreign "atg_le"
    (ptr t @-> t @-> t @-> returning void)

  let le_ =
    foreign "atg_le_"
    (ptr t @-> t @-> t @-> returning void)

  let le_out =
    foreign "atg_le_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let leaky_relu =
    foreign "atg_leaky_relu"
    (ptr t @-> t @-> returning void)

  let leaky_relu_ =
    foreign "atg_leaky_relu_"
    (ptr t @-> t @-> returning void)

  let leaky_relu_out =
    foreign "atg_leaky_relu_out"
    (ptr t @-> t @-> t @-> returning void)

  let lgamma =
    foreign "atg_lgamma"
    (ptr t @-> t @-> returning void)

  let lgamma_ =
    foreign "atg_lgamma_"
    (ptr t @-> t @-> returning void)

  let lgamma_out =
    foreign "atg_lgamma_out"
    (ptr t @-> t @-> t @-> returning void)

  let linear =
    foreign "atg_linear"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let linspace1 =
    foreign "atg_linspace1"
    (ptr t @-> scalar @-> scalar @-> int @-> int @-> returning void)

  let linspace2 =
    foreign "atg_linspace2"
    (ptr t @-> scalar @-> scalar @-> int64_t @-> int @-> int @-> returning void)

  let linspace_out1 =
    foreign "atg_linspace_out1"
    (ptr t @-> t @-> scalar @-> scalar @-> returning void)

  let linspace_out2 =
    foreign "atg_linspace_out2"
    (ptr t @-> t @-> scalar @-> scalar @-> int64_t @-> returning void)

  let log =
    foreign "atg_log"
    (ptr t @-> t @-> returning void)

  let log10 =
    foreign "atg_log10"
    (ptr t @-> t @-> returning void)

  let log10_ =
    foreign "atg_log10_"
    (ptr t @-> t @-> returning void)

  let log10_out =
    foreign "atg_log10_out"
    (ptr t @-> t @-> t @-> returning void)

  let log1p =
    foreign "atg_log1p"
    (ptr t @-> t @-> returning void)

  let log1p_ =
    foreign "atg_log1p_"
    (ptr t @-> t @-> returning void)

  let log1p_out =
    foreign "atg_log1p_out"
    (ptr t @-> t @-> t @-> returning void)

  let log2 =
    foreign "atg_log2"
    (ptr t @-> t @-> returning void)

  let log2_ =
    foreign "atg_log2_"
    (ptr t @-> t @-> returning void)

  let log2_out =
    foreign "atg_log2_out"
    (ptr t @-> t @-> t @-> returning void)

  let log_ =
    foreign "atg_log_"
    (ptr t @-> t @-> returning void)

  let log_normal_ =
    foreign "atg_log_normal_"
    (ptr t @-> t @-> double @-> double @-> returning void)

  let log_out =
    foreign "atg_log_out"
    (ptr t @-> t @-> t @-> returning void)

  let log_sigmoid =
    foreign "atg_log_sigmoid"
    (ptr t @-> t @-> returning void)

  let log_sigmoid_backward =
    foreign "atg_log_sigmoid_backward"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let log_sigmoid_backward_out =
    foreign "atg_log_sigmoid_backward_out"
    (ptr t @-> t @-> t @-> t @-> t @-> returning void)

  let log_sigmoid_forward =
    foreign "atg_log_sigmoid_forward"
    (ptr t @-> t @-> returning void)

  let log_sigmoid_forward_out =
    foreign "atg_log_sigmoid_forward_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let log_sigmoid_out =
    foreign "atg_log_sigmoid_out"
    (ptr t @-> t @-> t @-> returning void)

  let log_softmax =
    foreign "atg_log_softmax"
    (ptr t @-> t @-> int64_t @-> returning void)

  let logdet =
    foreign "atg_logdet"
    (ptr t @-> t @-> returning void)

  let logspace1 =
    foreign "atg_logspace1"
    (ptr t @-> scalar @-> scalar @-> int @-> int @-> returning void)

  let logspace2 =
    foreign "atg_logspace2"
    (ptr t @-> scalar @-> scalar @-> int64_t @-> int @-> int @-> returning void)

  let logspace_out1 =
    foreign "atg_logspace_out1"
    (ptr t @-> t @-> scalar @-> scalar @-> returning void)

  let logspace_out2 =
    foreign "atg_logspace_out2"
    (ptr t @-> t @-> scalar @-> scalar @-> int64_t @-> returning void)

  let logsumexp =
    foreign "atg_logsumexp"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let logsumexp_out =
    foreign "atg_logsumexp_out"
    (ptr t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let lstm1 =
    foreign "atg_lstm1"
    (ptr t @-> t @-> ptr t @-> int @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> int @-> returning void)

  let lstm2 =
    foreign "atg_lstm2"
    (ptr t @-> t @-> t @-> ptr t @-> int @-> ptr t @-> int @-> int @-> int64_t @-> double @-> int @-> int @-> returning void)

  let lstm_cell =
    foreign "atg_lstm_cell"
    (ptr t @-> t @-> ptr t @-> int @-> t @-> t @-> t @-> t @-> returning void)

  let lt =
    foreign "atg_lt"
    (ptr t @-> t @-> t @-> returning void)

  let lt_ =
    foreign "atg_lt_"
    (ptr t @-> t @-> t @-> returning void)

  let lt_out =
    foreign "atg_lt_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let margin_ranking_loss =
    foreign "atg_margin_ranking_loss"
    (ptr t @-> t @-> t @-> t @-> double @-> int64_t @-> returning void)

  let masked_fill_ =
    foreign "atg_masked_fill_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let masked_scatter_ =
    foreign "atg_masked_scatter_"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let masked_select =
    foreign "atg_masked_select"
    (ptr t @-> t @-> t @-> returning void)

  let masked_select_out =
    foreign "atg_masked_select_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let matmul =
    foreign "atg_matmul"
    (ptr t @-> t @-> t @-> returning void)

  let matmul_out =
    foreign "atg_matmul_out"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let matrix_power =
    foreign "atg_matrix_power"
    (ptr t @-> t @-> int64_t @-> returning void)

  let matrix_rank1 =
    foreign "atg_matrix_rank1"
    (ptr t @-> t @-> double @-> int @-> returning void)

  let matrix_rank2 =
    foreign "atg_matrix_rank2"
    (ptr t @-> t @-> int @-> returning void)

  let max =
    foreign "atg_max"
    (ptr t @-> t @-> t @-> returning void)

  let max1 =
    foreign "atg_max1"
    (ptr t @-> t @-> int64_t @-> int @-> returning void)

  let max_out1 =
    foreign "atg_max_out1"
    (ptr t @-> t @-> t @-> t @-> returning void)

  let max_out2 =
    foreign "atg_max_out2"
    (ptr t @-> t @-> t @-> t @-> int64_t @-> int @-> returning void)

  let max_pool1d =
    foreign "atg_max_pool1d"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool1d_with_indices =
    foreign "atg_max_pool1d_with_indices"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool2d =
    foreign "atg_max_pool2d"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool2d_with_indices =
    foreign "atg_max_pool2d_with_indices"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool2d_with_indices_backward =
    foreign "atg_max_pool2d_with_indices_backward"
    (ptr t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> t @-> returning void)

  let max_pool2d_with_indices_backward_out =
    foreign "atg_max_pool2d_with_indices_backward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> t @-> returning void)

  let max_pool2d_with_indices_forward =
    foreign "atg_max_pool2d_with_indices_forward"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool2d_with_indices_forward_out =
    foreign "atg_max_pool2d_with_indices_forward_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool2d_with_indices_out =
    foreign "atg_max_pool2d_with_indices_out"
    (ptr t @-> t @-> t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)

  let max_pool3d =
    foreign "atg_max_pool3d"
    (ptr t @-> t @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> ptr long @-> int @-> int @-> returning void)
